# RAG

12.RAG/: main.py  pyproject.toml  rag.ipynb  rag_using_langchain.ipynb
13.Tools/: main.py  pyproject.toml  tools_in_langchain.ipynb
